# juice

./: CMakeLists.txt  README.md  WORKFLOW.md  compile_commands.json
assets/glsl/: main.frag  main.vert
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
script/: run.sh
source/: CMakeLists.txt
source/juice/: juice.hpp  pch.hpp
source/juice/camera/: orthographic_camera.cpp  orthographic_camera.hpp
source/juice/core/: app.cpp  app.hpp  entry_point.hpp  log.cpp  timer.cpp  timer.hpp  utils.hpp
source/juice/event/: app_event.hpp  event.hpp  key_event.hpp  mouse_event.hpp
source/juice/graphic/: line.cpp  line.hpp  pent.cpp  pent.hpp  rect.cpp  rect.hpp  shape.hpp
source/juice/layer/: layer.cpp  layer.hpp  layer_stack.cpp  layer_stack.hpp
source/juice/renderer/: graphics.cpp  graphics.hpp  renderer.cpp  renderer.hpp
source/juice/shader/: shader.cpp  shader.hpp
source/juice/window/: window.cpp  window.hpp
